syntax = "proto3";

package plc;


import "type/plc_device_info.proto";
import "type/response_status.proto";


enum ActivateAdapterVersion {
    init_ea5a12b_20240927 = 0;
}

message ActivateAdapterRequest {
    ActivateAdapterVersion version = 1;
    PlcDeviceInfo info = 2;
}

message ActivateAdapterResponse {
    message Version {
        ActivateAdapterVersion request = 1;
        ActivateAdapterVersion required = 2;
    };
    Version version = 1;
    ResponseStatus status = 2;
}
